fix burger menu spacing

--- a/src/Components/Header/styles.module.scss
+++ b/src/Components/Header/styles.module.scss
@@ -25,6 +25,7 @@
   border-radius: 20px;
   padding-left: 12px;
   padding-right: 12px;
+  cursor: default;
 
   .expandableButton {
     position: relative;
